--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,16 @@
+buildscript {
+     ext.kotlin_version='1.7.10',
+   repositories{
+    google()
+    mavenCentral()
+   }
+    dependencies {
+     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:8.5.0' // Check for the latest version
+        classpath("com.google.gms.google-services") version "4.4.2" // Check for the latest version
+    }
+}
+
 allprojects {
     repositories {
         google()
