--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+ 
+  cloud_firestore: ^5.0.2  # for Firestore
+  firebase_storage: ^12.1.0 # for Stora
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,6 +42,7 @@ dependencies:
   curved_navigation_bar: ^1.0.5
   http: ^1.2.1
   cached_network_image: ^3.3.1
+  firebase_core: ^3.1.1
 
 dev_dependencies:
   flutter_test:
